[tool.poetry]
name = "libtimed"
version = "0.3.2"
description = "Library to intreact with timed webapp."
authors = [
  "Arthur Deierlein <arthur.deierlein@adfinis.com>",
  "Gian Klug <gian.klug@adfinis.com>",
]
readme = "README.md"
packages = [{ include = "libtimed", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
keyring = "^24.1.0"
inflection = "^0.5.1"
requests-cache = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.2"
pytest-coverage = "^0.0"
isort = "^5.12.0"
pdbpp = "^0.10.3"



# Dependencies only used in examples
[tool.poetry.group.example.dependencies]
pyfzf = "^0.3.1"

[tool.isort]
known_first_party = ["libtimed"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88


[tool.coverage.run]
source = ["."]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "pragma: todo cover",
  "def __str__",
  "def __unicode__",
  "def __repr__",
]
omit = []
show_missing = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
major_on_zero = false
branch = "main"
build_command = "pip install poetry && poetry build"
